src/objects/PO__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maximum_Spend__c</fullName>
        <label>Maximum Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Spend__c</fullName>
        <formula>Maximum_Spend__c -  Total_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spend_Used__c</fullName>
        <formula>Total_Charges__c / Maximum_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Open</fullName>
                </value>
                <value>
                    <fullName>Accepting Charges</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Charges__c</fullName>
        <label>Total Charges</label>
        <summarizedField>Charge__c.Amount__c</summarizedField>
        <summaryForeignKey>Charge__c.PO__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>PO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_POs</fullName>
        <columns>NAME</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Total_Charges__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepting Charges</value>
        </filters>
        <label>Open POs</label>
    </listViews>
    <nameField>
        <label>PO Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>